--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,8 +3,8 @@ name: hugo-build-push-folder
 on:
   # Trigger the workflow on git push to a branch where this workflow file exists 
   push:
-    paths:
-      - website/**
+    # paths:
+    #   - website/**
     branches:
       - main
       - 'release-v**'
