--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,7 +7,7 @@ on:
     #   - website/**
     branches:
       - main
-      - 'release-v**'
+      # - 'release-v**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
