--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -43,5 +43,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./website/public
-          # destination_dir: ${{ steps.extract_branch.outputs.branch }}
+          destination_dir: ${{ steps.extract_branch.outputs.branch }}
           # keep_files: true          
