--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -43,6 +43,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./website/public
-          # destination_dir: ${{ steps.extract_branch.outputs.branch }}
-          destination_dir: ./
+          destination_dir: ${{ steps.extract_branch.outputs.branch }}
+          # destination_dir: ./
           # keep_files: true          
