--- a/docs-site/config.toml
+++ b/docs-site/config.toml
@@ -133,11 +133,9 @@ github_project_repo = "https://github.com/google/docsy"
 # or specify a new value if you want to reference another branch in your GitHub links
 github_branch= "master"
 
-# Google Custom Search Engine ID. Remove or comment out to disable search.
-gcs_engine_id = "d72aa9b2712488cc3"
 
 # Enable Algolia DocSearch
-algolia_docsearch = false
+algolia_docsearch = true
 
 # Enable Lunr.js offline search
 offlineSearch = false
