--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,11 +3,10 @@ name: hugo-build-push-folder
 on:
   # Trigger the workflow on git push to a branch where this workflow file exists 
   push:
-    # paths:
-    #   - website/**
+    paths:
+      - docs-site/**
     branches:
       - main
-      # - 'release-v**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
