updated the AKS Construction set reference.

--- a/deployments/tls/dex-config-map.yaml
+++ b/deployments/tls/dex-config-map.yaml
@@ -19,8 +19,8 @@ data:
     enablePasswordDB: true  
     staticPasswords:
     - email: user@example.com
-      hash: $2a$10$aEO3ZBW0K03zZUCuKB.uK.0HbsQ166Ckzktg39rKx5nS.CD8l1eGq
-      username: srpadala@microsoft.com
+      hash: $2a$10$ckGxW0bzcUv3bUmuKB.uK.POuBHgx3z9zRFghdzMNx1.fyrSiz602
+      username: user@example.com
       userID: "15841185641784"
     staticClients:
     - idEnv: OIDC_CLIENT_ID
