--- a/deployments/vanilla/kustomization.yaml
+++ b/deployments/vanilla/kustomization.yaml
@@ -33,67 +33,58 @@ sortOptions:
 
 resources:
 # Cert-Manager
-- ../../manifests/common/cert-manager/cert-manager/base
-- ../../manifests/common/cert-manager/kubeflow-issuer/base
+- ../common/cert-manager/cert-manager/base
+- ../common/cert-manager/kubeflow-issuer/base
 # Istio
-- ../../manifests/common/istio-1-16/istio-crds/base
-- ../../manifests/common/istio-1-16/istio-namespace/base
-- ../../manifests/common/istio-1-16/istio-install/base
+- ../common/istio-1-17/istio-crds/base
+- ../common/istio-1-17/istio-namespace/base
+- ../common/istio-1-17/istio-install/base
 # OIDC Authservice
-- ../../manifests/common/oidc-authservice/base
+- ../common/oidc-client/oidc-authservice/base
 # Dex
-- ../../manifests/common/dex/overlays/istio
+- ../common/dex/overlays/istio
 # KNative
-- ../../manifests/common/knative/knative-serving/overlays/gateways
-- ../../manifests/common/knative/knative-eventing/base
-- ../../manifests/common/istio-1-16/cluster-local-gateway/base
+- ../common/knative/knative-serving/overlays/gateways
+- ../common/knative/knative-eventing/base
+- ../common/istio-1-17/cluster-local-gateway/base
 # Kubeflow namespace
-- ../../manifests/common/kubeflow-namespace/base
+- ../common/kubeflow-namespace/base
 # Kubeflow Roles
-- ../../manifests/common/kubeflow-roles/base
+- ../common/kubeflow-roles/base
 # Kubeflow Istio Resources
-- ../../manifests/common/istio-1-16/kubeflow-istio-resources/base
+- ../common/istio-1-17/kubeflow-istio-resources/base
 
 
 # Kubeflow Pipelines
-- ../../manifests/apps/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user
+- ../apps/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user
 # Katib
-- ../../manifests/apps/katib/upstream/installs/katib-with-kubeflow
+- ../apps/katib/upstream/installs/katib-with-kubeflow
 # Central Dashboard
-- ../../manifests/apps/centraldashboard/upstream/overlays/kserve
+- ../apps/centraldashboard/upstream/overlays/kserve
 # Admission Webhook
-- ../../manifests/apps/admission-webhook/upstream/overlays/cert-manager
+- ../apps/admission-webhook/upstream/overlays/cert-manager
 # Jupyter Web App
-- ../../manifests/apps/jupyter/jupyter-web-app/upstream/overlays/istio
+- ../apps/jupyter/jupyter-web-app/upstream/overlays/istio
 # Notebook Controller
 - ../apps/jupyter/notebook-controller/upstream/overlays/kubeflow
 # Profiles + KFAM
-- ../../manifests/apps/profiles/upstream/overlays/kubeflow
+- ../apps/profiles/upstream/overlays/kubeflow
+# PVC Viewer
+- ../apps/pvcviewer-controller/upstream/base/
 # Volumes Web App
-- ../../manifests/apps/volumes-web-app/upstream/overlays/istio
+- ../apps/volumes-web-app/upstream/overlays/istio
 # Tensorboards Controller
-- ../../manifests/apps/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
+-  ../apps/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
 # Tensorboard Web App
-- ../../manifests/apps/tensorboard/tensorboards-web-app/upstream/overlays/istio
+-  ../apps/tensorboard/tensorboards-web-app/upstream/overlays/istio
 # Training Operator
-- ../../manifests/apps/training-operator/upstream/overlays/kubeflow
+- ../apps/training-operator/upstream/overlays/kubeflow
 # User namespace
-- ../../manifests/common/user-namespace/base
+- ../common/user-namespace/base
 
 # KServe
-- ../../manifests/contrib/kserve/kserve
-- ../../manifests/contrib/kserve/models-web-app/overlays/kubeflow
+- ../contrib/kserve/kserve
+- ../contrib/kserve/models-web-app/overlays/kubeflow
 
 patches:
 - path: istio-webhook-aks-patch.yaml
-
-patchesJson6902:
-  - target:
-      group: autoscaling
-      version: v2beta2
-      kind: 'HorizontalPodAutoscaler'
-      name: '.*'
-    patch: |-
-      - op: replace
-        path: "/apiVersion"
-        value: autoscaling/v2
