--- a/deployments/vanilla/kustomization.yaml
+++ b/deployments/vanilla/kustomization.yaml
@@ -28,63 +28,65 @@ sortOptions:
     - StatefulSet
     - CronJob
     - PodDisruptionBudget
+    - RequestAuthentication
     orderLast:
     - ValidatingWebhookConfiguration
 
 resources:
 # Cert-Manager
-- ../common/cert-manager/cert-manager/base
+- ../common/cert-manager/base
 - ../common/cert-manager/kubeflow-issuer/base
 # Istio
-- ../common/istio-1-17/istio-crds/base
-- ../common/istio-1-17/istio-namespace/base
-- ../common/istio-1-17/istio-install/base
+- ../common/istio/istio-crds/base
+- ../common/istio/istio-namespace/base
+- ../common/istio/istio-install/overlays/oauth2-proxy
 # OIDC Authservice
-- ../common/oidc-client/oidc-authservice/base
+#- ../common/oidc-client/oidc-authservice/base
+- ../common/oauth2-proxy/overlays/m2m-dex-and-kind
 # Dex
-- ../common/dex/overlays/istio
+- ../common/dex/overlays/oauth2-proxy
 # KNative
 - ../common/knative/knative-serving/overlays/gateways
 - ../common/knative/knative-eventing/base
-- ../common/istio-1-17/cluster-local-gateway/base
+- ../common/istio/cluster-local-gateway/base
 # Kubeflow namespace
 - ../common/kubeflow-namespace/base
 # Kubeflow Roles
 - ../common/kubeflow-roles/base
 # Kubeflow Istio Resources
-- ../common/istio-1-17/kubeflow-istio-resources/base
+- ../common/istio/kubeflow-istio-resources/base
 
 
 # Kubeflow Pipelines
-- ../apps/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user
+- ../applications/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user
 # Katib
-- ../apps/katib/upstream/installs/katib-with-kubeflow
+- ../applications/katib/upstream/installs/katib-with-kubeflow
 # Central Dashboard
-- ../apps/centraldashboard/upstream/overlays/kserve
+- ../applications/centraldashboard/overlays/oauth2-proxy
 # Admission Webhook
-- ../apps/admission-webhook/upstream/overlays/cert-manager
+- ../applications/admission-webhook/upstream/overlays/cert-manager
 # Jupyter Web App
-- ../apps/jupyter/jupyter-web-app/upstream/overlays/istio
+- ../applications/jupyter/jupyter-web-app/upstream/overlays/istio
 # Notebook Controller
-- ../apps/jupyter/notebook-controller/upstream/overlays/kubeflow
+- ../applications/jupyter/notebook-controller/upstream/overlays/kubeflow
 # Profiles + KFAM
-- ../apps/profiles/upstream/overlays/kubeflow
+- ../applications/profiles/upstream/overlays/kubeflow
 # PVC Viewer
-- ../apps/pvcviewer-controller/upstream/base/
+- ../applications/pvcviewer-controller/upstream/base/
 # Volumes Web App
-- ../apps/volumes-web-app/upstream/overlays/istio
+- ../applications/volumes-web-app/upstream/overlays/istio
 # Tensorboards Controller
--  ../apps/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
+-  ../applications/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
 # Tensorboard Web App
--  ../apps/tensorboard/tensorboards-web-app/upstream/overlays/istio
+-  ../applications/tensorboard/tensorboards-web-app/upstream/overlays/istio
 # Training Operator
-- ../apps/training-operator/upstream/overlays/kubeflow
+- ../applications/training-operator/upstream/overlays/kubeflow
 # User namespace
 - ../common/user-namespace/base
 
 # KServe
-- ../contrib/kserve/kserve
-- ../contrib/kserve/models-web-app/overlays/kubeflow
+- ../applications/kserve/kserve
+- ../applications/kserve/models-web-app/overlays/kubeflow
 
 patches:
 - path: istio-webhook-aks-patch.yaml
