--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,4 @@
         path = manifests
         url = https://github.com/kubeflow/manifests.git
         branch = v1.10-branch
+        branch = v1.10-branch
