--- a/deployments/tls/dex-config-map.yaml
+++ b/deployments/tls/dex-config-map.yaml
@@ -16,14 +16,15 @@ data:
       format: text
     oauth2:
       skipApprovalScreen: true
-    enablePasswordDB: true  
+    enablePasswordDB: true
     staticPasswords:
     - email: user@example.com
-      hash: $2a$10$aEO3ZBW0K03zZUCuKB.uK.0HbsQ166Ckzktg39rKx5nS.CD8l1eGq
-      username: user@example.com
+      hashFromEnv: DEX_USER_PASSWORD
+      username: user
       userID: "15841185641784"
     staticClients:
+    # https://github.com/dexidp/dex/pull/1664
     - idEnv: OIDC_CLIENT_ID
-      redirectURIs: ["/authservice/oidc/callback"]
+      redirectURIs: ["/oauth2/callback"]
       name: 'Dex Login Application'
       secretEnv: OIDC_CLIENT_SECRET
